# MathMinds

graphs/: CMakeLists.txt  designer.cpp  designer.h  eighth_task.cpp  eighth_task.h  eighth_task.ui  fifth_task.cpp  fifth_task.h  fifth_task.ui  first_task.cpp  first_task.h  first_task.ui  fourth_task.cpp  fourth_task.h  fourth_task.ui  graph.cpp  graph.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  null_task.cpp  null_task.h  null_task.ui  prufer_code.cpp  prufer_code.h  prufer_code.ui  prufer_decode.cpp  prufer_decode.h  prufer_decode.ui  second_task.cpp  second_task.h  second_task.ui  seventh_task.cpp  seventh_task.h  seventh_task.ui  sixth_task.cpp  sixth_task.h  sixth_task.ui  third_task.cpp  (+2 more)
